# danctnix-tweaks

./: .gitignore  .gitlab-ci.yml  README.md  generate_cpuinfo.py  meson.build  pyproject.toml
.ci/: ruff.sh  vermin.sh
build-aux/meson/: postinstall.py
danctnix_tweaks/: __main__.py  backend.py  cpus.py  danctnix-tweakd.in  danctnix-tweaks.in  meson.build  pk-tweaks-action.sh  settingstree.py  tweakd.py  window.py
data/: danctnix-tweakd.initd.in  danctnix-tweakd.service  meson.build  org.danctnix.Tweaks.appdata.xml  org.danctnix.Tweaks.desktop  org.danctnix.Tweaks.metainfo.xml  org.danctnix.Tweaks.policy  org.postmarketos.Tweaks.appdata.xml  org.postmarketos.Tweaks.desktop  org.postmarketos.Tweaks.metainfo.xml  org.postmarketos.Tweaks.policy  postmarketos-tweakd.initd.in
pmos_tweaks/: __main__.py  backend.py  cpus.py  datasource.py  meson.build  pk-tweaks-action.sh  pmos-tweakd.in  pmos-tweaks.in  settingstree.py  socs.py  tweakd.py  window.py
settings/: about.yml  appearance.yml  fonts.yml  localtest.yml  phosh.yml  pinephone.yml  power.yml  sound.yml  sxmo-x11.yml  unlocker.yml
